fixed checkboxes on mobile

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -17,10 +17,6 @@ h1 {
   color: white;
 }
 
-.ant-menu-item {
-  padding: 0;
-}
-
 .Sidebar {
   overflow: visible;
 }
